# Capsaicin

./: .clang-format  .gitignore  CMakeLists.txt
docs/development/: getting_started.md
src/core/: CMakeLists.txt
src/core/include/: capsaicin.h
src/core/src/: gpu_shared.h
src/core/src/capsaicin/: blit.frag  capsaicin.cpp  capsaicin_internal.cpp  capsaicin_internal.h  capsaicin_internal_dump.cpp  capsaicin_internal_scene.cpp  capsaicin_internal_types.h  common_functions.inl  convolve_ibl.comp  convolve_ibl.frag  convolve_ibl.vert  debug_depth.frag  factory.h  generate_animated_vertices.comp  graph.cpp  graph.h  hash_reduce.h  static_string.h  string_hash.h  timeable.cpp  timeable.h
src/core/src/components/: component.cpp  component.h
src/core/src/components/blue_noise_sampler/: blue_noise_sampler.cpp  blue_noise_sampler.h  blue_noise_sampler.hlsl
src/core/src/components/brdf_lut/: brdf_lut.comp  brdf_lut.cpp  brdf_lut.h
src/core/src/components/light_builder/: gather_area_lights.comp  light_builder.cpp  light_builder.h  light_builder.hlsl  light_builder_shared.h
src/core/src/components/light_sampler/: light_sampler.h  light_sampler.hlsl  light_sampler_switcher.cpp  light_sampler_switcher.h
src/core/src/components/light_sampler_grid_cdf/: light_sampler_grid.hlsl  light_sampler_grid_cdf.comp  light_sampler_grid_cdf.cpp  light_sampler_grid_cdf.h  light_sampler_grid_cdf.hlsl  light_sampler_grid_shared.h
src/core/src/components/light_sampler_grid_stream/: light_sampler_grid_stream.cpp  light_sampler_grid_stream.h  light_sampler_grid_stream.hlsl  light_sampler_grid_stream_bounds.comp  light_sampler_grid_stream_build.comp
src/core/src/components/light_sampler_uniform/: light_sampler_uniform.cpp  light_sampler_uniform.h  light_sampler_uniform.hlsl
src/core/src/components/prefilter_ibl/: prefilter_ibl.cpp  prefilter_ibl.frag  prefilter_ibl.h  prefilter_ibl.vert
src/core/src/components/random_number_generator/: random_number_generator.cpp  random_number_generator.h  random_number_generator.hlsl
src/core/src/components/stratified_sampler/: stratified_sampler.cpp  stratified_sampler.h  stratified_sampler.hlsl  stratified_sampler_data.h
src/core/src/geometry/: geometry.hlsl  mesh.hlsl  mis.hlsl
src/core/src/lights/: box_sampling.hlsl  light_evaluation.hlsl  light_sampling.hlsl  light_sampling_volume.hlsl  lights.hlsl  lights_shared.h  reservoir.hlsl
src/core/src/materials/: material_evaluation.hlsl  material_sampling.hlsl  materials.hlsl
src/core/src/math/: color.hlsl  eotf.hlsl  hash.hlsl  math.hlsl  math_constants.hlsl  pack.hlsl  quaternion.hlsl  sampling.hlsl  tone_map.hlsl  transform.hlsl
src/core/src/ray_tracing/: intersect_data.hlsl  path_tracing.hlsl  path_tracing_rt.hlsl  path_tracing_shared.h  ray_tracing.hlsl  trace_ray.hlsl
src/core/src/render_techniques/: render_technique.cpp  render_technique.h
src/core/src/render_techniques/atmosphere/: atmosphere.comp  atmosphere.cpp  atmosphere.h
src/core/src/render_techniques/auto_exposure/: auto_exposure.comp  auto_exposure.cpp  auto_exposure.h
src/core/src/render_techniques/bloom/: bloom.cpp  bloom.h  blur.comp  combine.comp
src/core/src/render_techniques/color_grading/: color_grading.comp  color_grading.cpp  color_grading.h  color_grading_upload.comp
src/core/src/render_techniques/combine/: combine.comp  combine.cpp  combine.h
src/core/src/render_techniques/debug_textures/: debug_textures.cpp  debug_textures.vert
src/core/src/render_techniques/fsr/: fsr.cpp  fsr.h
src/core/src/render_techniques/gi1/: gi1.comp  gi1.cpp  gi1.frag  gi1.h  gi1.hlsl  gi1.rt  gi1.vert  gi1_shared.h  gi_denoiser.hlsl  glossy_reflections.hlsl  hash_grid_cache.hlsl  screen_probes.hlsl  world_space_restir.hlsl
src/core/src/render_techniques/image_metrics/: image_metrics.cpp  image_metrics.h
src/core/src/render_techniques/lens/: lens.comp  lens.cpp  lens.h
src/core/src/render_techniques/reference_path_tracer/: reference_path_tracer.comp  reference_path_tracer.cpp  reference_path_tracer.h  reference_path_tracer.rt
src/core/src/render_techniques/skybox/: skybox.cpp  skybox.frag  skybox.h  skybox.vert
src/core/src/render_techniques/ssgi/: ssgi.comp  ssgi.cpp  ssgi.h  ssgi_debug.comp  ssgi_shared.h
src/core/src/render_techniques/switcher/: switcher.h
src/core/src/render_techniques/tone_mapping/: tone_mapping.comp  tone_mapping.cpp  tone_mapping.h
src/core/src/render_techniques/variance_estimate/: variance_estimate.comp  variance_estimate.cpp  variance_estimate.h
src/core/src/render_techniques/visibility_buffer/: debug_dxr10.rt  debug_material.frag  debug_material.vert  debug_meshlets.frag  debug_velocity.frag  debug_velocity.vert  debug_wireframe.frag  debug_wireframe.mesh  debug_wireframe.task  disocclusion_mask.comp  visibility_buffer.cpp  visibility_buffer.frag  visibility_buffer.h  visibility_buffer.mesh  visibility_buffer.task  visibility_buffer_rt.comp  visibility_buffer_rt.rt  visibility_buffer_shared.h
src/core/src/renderers/: renderer.cpp  renderer.h
src/core/src/renderers/gi1/: gi1_renderer.cpp
src/core/src/renderers/reference_path_tracer/: reference_pt_renderer.cpp
src/core/src/utilities/: buffer_view.h  gpu_image_metrics.comp  gpu_image_metrics.cpp  gpu_image_metrics.h  gpu_mip.comp  gpu_mip.cpp  gpu_mip.h  gpu_mip2.comp  gpu_readback.cpp  gpu_readback.h  gpu_reduce.comp  gpu_reduce.cpp  gpu_reduce.h  gpu_sort.comp  gpu_sort.cpp  gpu_sort.h
src/scene_viewer/: CMakeLists.txt  main.cpp  main_shared.cpp  main_shared.h
